--- a/web/themes/custom/drupal_itm/templates/page.html.twig
+++ b/web/themes/custom/drupal_itm/templates/page.html.twig
@@ -67,9 +67,12 @@
  * @see html.html.twig
  */
 #}
+
+{#{% navbar_attributes.addClass('ml-auto') %}#}
+
 <div id="page-wrapper">
     <div id="page">
-        <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t }}">
+        <header id="header" class="header bg-secondary" role="banner" aria-label="{{ 'Site header'|t }}">
             {% block head %}
                 {% if page.secondary_menu or page.top_header or page.top_header_form %}
                     <nav{{ navbar_top_attributes }}>
@@ -88,7 +91,8 @@
                         {% endif %}
                     </nav>
                 {% endif %}
-                <nav{{ navbar_attributes }} >
+                <nav{{ navbar_attributes }} {{ attributes.addClass('ml-auto') }} >
+
                     {% if container_navbar %}
                     <div class="container">
                         {% endif %}
