--- a/web/themes/custom/drupal_itm/css/style.css
+++ b/web/themes/custom/drupal_itm/css/style.css
@@ -1,7 +1,3 @@
-/* 
-Theme Name: Bootstrap 4 Sass
-Description: Bootstrap 4 with Sass
-*/
 /* IMPORTS */
 /* VARIABLES */
 /*!
@@ -3594,11 +3590,11 @@ tbody.collapse.show {
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 1;
-  color: #000;
+  color: #000000;
   text-shadow: 0 1px 0 #fff;
   opacity: .5; }
   .close:hover, .close:focus {
-    color: #000;
+    color: #000000;
     text-decoration: none;
     opacity: .75; }
   .close:not(:disabled):not(.disabled) {
@@ -3662,7 +3658,7 @@ button.close {
   bottom: 0;
   left: 0;
   z-index: 1040;
-  background-color: #000; }
+  background-color: #000000; }
   .modal-backdrop.fade {
     opacity: 0; }
   .modal-backdrop.show {
@@ -3762,7 +3758,7 @@ button.close {
     .bs-tooltip-top .arrow::before, .bs-tooltip-auto[x-placement^="top"] .arrow::before {
       top: 0;
       border-width: 0.4rem 0.4rem 0;
-      border-top-color: #000; }
+      border-top-color: #000000; }
 
 .bs-tooltip-right, .bs-tooltip-auto[x-placement^="right"] {
   padding: 0 0.4rem; }
@@ -3773,7 +3769,7 @@ button.close {
     .bs-tooltip-right .arrow::before, .bs-tooltip-auto[x-placement^="right"] .arrow::before {
       right: 0;
       border-width: 0.4rem 0.4rem 0.4rem 0;
-      border-right-color: #000; }
+      border-right-color: #000000; }
 
 .bs-tooltip-bottom, .bs-tooltip-auto[x-placement^="bottom"] {
   padding: 0.4rem 0; }
@@ -3782,7 +3778,7 @@ button.close {
     .bs-tooltip-bottom .arrow::before, .bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
       bottom: 0;
       border-width: 0 0.4rem 0.4rem;
-      border-bottom-color: #000; }
+      border-bottom-color: #000000; }
 
 .bs-tooltip-left, .bs-tooltip-auto[x-placement^="left"] {
   padding: 0 0.4rem; }
@@ -3793,14 +3789,14 @@ button.close {
     .bs-tooltip-left .arrow::before, .bs-tooltip-auto[x-placement^="left"] .arrow::before {
       left: 0;
       border-width: 0.4rem 0 0.4rem 0.4rem;
-      border-left-color: #000; }
+      border-left-color: #000000; }
 
 .tooltip-inner {
   max-width: 200px;
   padding: 0.25rem 0.5rem;
   color: #fff;
   text-align: center;
-  background-color: #000;
+  background-color: #000000;
   border-radius: 0.25rem; }
 
 .popover {
@@ -7065,7 +7061,7 @@ nav.tabs {
  * Styles for Bartik's modal windows
  */
 .ui-widget-overlay {
-  background: #000;
+  background: #000000;
   opacity: 0.7; }
 
 .ui-dialog {
@@ -7248,7 +7244,7 @@ nav.tabs {
   border-right-width: 1px; }
 
 .vertical-tabs__menu-item.is-selected .vertical-tabs__menu-item-title {
-  color: #000; }
+  color: #000000; }
 
 .vertical-tabs__menu-item-summary {
   display: block;
@@ -7671,7 +7667,7 @@ a {
   background: #A8CF45 !important; }
 
 .bg-secondary, header .navbar {
-  background-color: #343a40 !important; }
+  background-color: #f8f9fa !important; }
 
 .site-footer {
   background: #0079C0 !important; }
@@ -7701,30 +7697,58 @@ a {
 
 .menu--main {
   margin-left: auto; }
+  .menu--main li a {
+    color: #000000; }
+  .menu--main li:hover {
+    text-decoration: underline;
+    opacity: 0.8; }
+
+.navbar-brand {
+  color: #000000; }
+  .navbar-brand img {
+    width: 4rem; }
+  .navbar-brand span {
+    margin-left: 1rem; }
+  .navbar-brand:hover {
+    opacity: 0.8;
+    color: #000000; }
 
 .path-frontpage .menu--main {
   margin-left: auto;
   margin-right: auto; }
 
+.path-frontpage .navbar-brand img {
+  width: 11rem;
+  margin-top: 1rem; }
+
+.path-frontpage .node--type-peliculas .node-readmore {
+  display: none; }
+
 .region-top-header {
   margin: 0 auto; }
 
-.title__pelicula > a {
+.cover-pelicula {
+  position: relative; }
+  .cover-pelicula img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    top: 0;
+    object-fit: cover; }
+
+.title__pelicula a {
   font-size: 1rem;
-  color: #000; }
-  .title__pelicula > a:hover, .title__pelicula > a:focus {
-    color: red; }
+  color: #000000; }
+  .title__pelicula a:hover, .title__pelicula a:focus {
+    color: #000000;
+    opacity: 0.8; }
 
 header .navbar-dark .navbar-nav .nav-link {
   color: #f8f9fa; }
 
-.featured-top {
-  width: 100%;
-  max-width: 100%; }
-  .featured-top__inner {
-    width: 100%;
-    margin: 0;
-    padding: 0; }
+.node--view-mode-teaser {
+  border: none; }
 
 .tagcloud ul {
   margin: 0;
@@ -7758,3 +7782,8 @@ header .navbar-dark .navbar-nav .nav-link {
         background-color: #3498db;
         border: 1px solid #3498db;
         color: #fff; }
+
+.featured-bottom--container .region .container {
+  width: 100%;
+  max-width: 100%;
+  padding: 0; }
