--- a/web/themes/custom/drupal_itm/scss/style.scss
+++ b/web/themes/custom/drupal_itm/scss/style.scss
@@ -1,7 +1,3 @@
-/* 
-Theme Name: Bootstrap 4 Sass
-Description: Bootstrap 4 with Sass
-*/
 // import files
 @import "import";
 
@@ -24,7 +20,7 @@ a {
 }
 
 .bg-secondary, header .navbar {
-  background-color: $gray-800 !important;
+  background-color: $gray-100 !important;
 }
 
 .site-footer {
@@ -63,6 +59,35 @@ a {
 
 .menu--main {
   margin-left: auto;
+
+  li {
+    a {
+      color: $black;
+    }
+    &:hover {
+      text-decoration: underline;
+      @include opacity(.8);
+    }
+  }
+}
+
+.navbar-brand {
+
+  color: $black;
+
+  img {
+    width: 4rem;
+  }
+
+  span {
+    margin-left: 1rem;
+  }
+
+  &:hover {
+    @include opacity(.8);
+    color: $black;
+  }
+
 }
 
 .path-frontpage {
@@ -70,18 +95,50 @@ a {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .navbar-brand {
+    img {
+      width: 11rem;
+      margin-top: 1rem;
+    }
+  }
+
+  .node {
+    &--type-peliculas {
+      .node-readmore {
+        display: none;
+      }
+    }
+  }
 }
 
 .region-top-header {
   margin: 0 auto;
 }
 
-.title__pelicula > a {
-  font-size: 1rem;
-  color: #000;
+.cover-pelicula {
 
-  &:hover, &:focus {
-    color: red;
+  position: relative;
+
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    top: 0;
+    object-fit: cover;
+  }
+}
+
+.title__pelicula {
+  a {
+    font-size: 1rem;
+    color: $black;
+
+    &:hover, &:focus {
+      color: $black;
+      @include opacity(.8);
+    }
   }
 }
 
@@ -95,14 +152,9 @@ header {
   }
 }
 
-.featured-top {
-  width: 100%;
-  max-width: 100%;
-
-  &__inner {
-    width: 100%;
-    margin: 0;
-    padding: 0;
+.node {
+  &--view-mode-teaser {
+    border: none;
   }
 }
 
@@ -141,6 +193,20 @@ header {
         background-color: #3498db;
         border: 1px solid #3498db;
         color: #fff;
+      }
+    }
+  }
+}
+
+.featured-bottom {
+  &--container{
+    .region{
+      .container{
+        width: 100%;
+        max-width: 100%;
+        padding: 0;
+
+        @media (min-width: map-get($grid-breakpoints, 'xl')) { }
       }
     }
   }
