--- a/web/themes/custom/drupal_itm/scss/variables.scss
+++ b/web/themes/custom/drupal_itm/scss/variables.scss
@@ -7,6 +7,7 @@ $primary-dark: darken($primary-shade, 12%);
 $accent-shade: #0079C0;
 $accent-light: lighten($accent-shade, 37%);
 $accent-dark: darken($accent-shade, 12%);
+$black: #000000;
 // Reassign color vars to semantic color scheme
 $red: #dc3545;
 $yellow: #ffc107;
