--- a/web/themes/custom/drupal_itm/scss/variables.scss
+++ b/web/themes/custom/drupal_itm/scss/variables.scss
@@ -8,6 +8,7 @@ $accent-shade: #0079C0;
 $accent-light: lighten($accent-shade, 37%);
 $accent-dark: darken($accent-shade, 12%);
 $black: #000000;
+$white: #ffffff;
 // Reassign color vars to semantic color scheme
 $red: #dc3545;
 $yellow: #ffc107;
