--- a/web/themes/custom/drupal_itm/templates/node--peliculas--teaser.html.twig
+++ b/web/themes/custom/drupal_itm/templates/node--peliculas--teaser.html.twig
@@ -94,6 +94,7 @@
         {% endif %}
     </header>
     <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
+        {{ kint(content | keys) }}
         {{ content }}
     </div>
 </article>
